www/css/app.css
@import "main.css";

html {
  height: 100%;
  min-height: 100vh;
}

.body-container {
  width: 100vw;
  height: 100%;
  min-height: 100vh;
  box-sizing: border-box;
  background: var(--color-bg);
}

.header-container {
  width: 100%;
  height: 20%;
  display: flex;
  flex-direction: row;
  padding: 20px;
  box-sizing: border-box;
}

.header-logo {
  width: 220px;
  height: 100px;
  padding: 0;
  background-image: url(../imgs/logo.png);
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center center;
}

.header-info {
  padding: 0;
  margin: -2px 42px 0;
  font-size: 50px;
  line-height: 50px;
  text-transform: uppercase;
}

.header-icons {}

.content-container {
  display: flex;
  flex-direction: row;
  width: 100%;
  height: 80%;
}

.chat-container {
  width: 25%;
  height: 100%;
  display: flex;
  flex-direction: column;
  padding: 16px;
  box-sizing: border-box;
}

.chat-messages {
  width: 100%;
  height: 50%;
  max-width: 720px;
  margin: 0 auto;
  overflow: scroll;
  display: flex;
  flex-direction: column;
  box-sizing: border-box;
  background-color: var(--color-dark);
}

.chat-input {
  width: 100%;
  height: 50%;
  max-width: 720px;
  margin: 0 auto;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: flex-end;
  box-sizing: border-box;
}

.form-element.input-button {
  width: 50%;
  max-width: 100px;
  border: none;
  outline: 0;
  border-radius: 2px;
  padding: 10px 20px;
  font-size: 14px;
  background-color: var(--color-dark);
  color: var(--color-bg);
  cursor: pointer;
  text-transform: uppercase;
  transition: all linear .15s;
}
.input-button:hover {
  background-color: var(--color-hover);
}

input.form-element, textarea.form-element {
  width: 100%;
  margin: 7px auto;
  padding: 8px;
  border: none;
  font-size: 18px;
  box-sizing: border-box;
  background-color: var(--color-dark);
  color: var(--color-light);
}

input.form-element::placeholder, textarea.form-element::placeholder {
  font-size: 14px;
  color: var(--color-bg);
  opacity: 1;
}

input.form-element:-ms-input-placeholder, textarea.form-element:-ms-input-placeholder {
  font-size: 14px;
  color: var(--color-bg);
}

input.form-element::-ms-input-placeholder, textarea.form-element::-ms-input-placeholder {
  font-size: 14px;
  color: var(--color-bg);
}

input.form-element:focus,
textarea.form-element:focus,
label.form-label:focus,
input.image-input:focus {
  outline: none;
}

input.image-input {
  display: none;
}

label.form-label-error {
  opacity: 0;
  color: var(--color-error);
  text-align: center;
  font-size: 20px;
  margin-bottom: 12px;
}

textarea.form-element {
  flex-grow: 1;
}

.chat-message {
  width: 100%;
  margin: 10px 0;
  padding: 20px;
  display: flex;
  flex-direction: row;
  box-sizing: border-box;
  background-color: bisque;
}

.message-user {
  width: 25%;
}

.message-message {
  width: 75%;
}

.image-container {
  width: 25%;
  height: 100%;
  display: flex;
  flex-direction: column;
  padding: 16px;
  box-sizing: border-box;
}

.image-wall {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: flex-start;
}

.image-common {
  background-repeat: no-repeat;
  background-position: center center;
  background-size: cover;
}

.image-H {
  width: 66%;
  padding-bottom: 50%;
}
.image-V {
  width: 33%;
  padding-bottom: 50%;
}
.image-SQ {
  width: 50%;
  padding-bottom: 50%;
}

.video-container {
  width: 50%;
  height: 100%;
  padding: 16px;
  display: flex;
  flex-direction: column;
  box-sizing: border-box;
}

.video-wrapper {
  width: 100%;
  height: 100%;
  flex: 1;
  position: relative;
  margin: 0 auto;
  box-sizing: border-box;
  overflow: hidden;
}

.video-wrapper iframe {
  width: 100%;
  height: 100%;
}

